1515189291 | 71 files | M bin/version.txt,  M content/panorama/localization/tenfoot_dutch.txt,  M content/panorama/localization/tenfoot_japanese.txt,  M content/panorama/localization/tenfoot_romanian.txt,  M content/panorama/localization/tenfoot_schinese.txt,  M content/panorama/localization/tenfoot_spanish.txt,  M content/panorama/localization/tenfoot_tchinese.txt,  M content/vrmonitor/translations/vrmonitor_brazilian.txt,  M content/vrmonitor/translations/vrmonitor_bulgarian.txt,  M content/vrmonitor/translations/vrmonitor_czech.txt,  M content/vrmonitor/translations/vrmonitor_danish.txt,  M content/vrmonitor/translations/vrmonitor_dutch.txt,  M content/vrmonitor/translations/vrmonitor_english.txt,  M content/vrmonitor/translations/vrmonitor_errors_brazilian.txt,  M content/vrmonitor/translations/vrmonitor_errors_bulgarian.txt,  M content/vrmonitor/translations/vrmonitor_errors_czech.txt,  M content/vrmonitor/translations/vrmonitor_errors_danish.txt,  M content/vrmonitor/translations/vrmonitor_errors_dutch.txt,  M content/vrmonito
https://steamdb.info/patchnotes/2416149/

--- a/content/panorama/localization/tenfoot_dutch.txt
+++ b/content/panorama/localization/tenfoot_dutch.txt
@@ -612,7 +612,7 @@
 "[english]BackgroundImageReload_CameraHeight"	"Camera Height"
 "NightModeCheck"	"Nachtmodus"
 "[english]NightModeCheck"	"Night Mode"
-"NightModeDesc"	"Nachtmodus dimt de headset tot 5:00 AM (of tot SteamVR herstart wordt)."
+"NightModeDesc"	"Nachtmodus dimt de headset tot 05:00 (of tot SteamVR wordt herstart)."
 "[english]NightModeDesc"	"Night Mode dims the headset until 5:00 AM (or until SteamVR is restarted)."
 "Transition_Progress_Description"	"WACHTEN OP..."
 "[english]Transition_Progress_Description"	"WAITING FOR..."
