--- a/content/panorama/localization/tenfoot_japanese.txt
+++ b/content/panorama/localization/tenfoot_japanese.txt
@@ -422,11 +422,11 @@
 "[english]IPD_Description"	"Distance \nbetween lenses"
 "IPD_Setting"	"{s:physical_ipd_mm}mm"
 "[english]IPD_Setting"	"{s:physical_ipd_mm}mm"
-"SeatedSetupHeader"	"座位の設定"
+"SeatedSetupHeader"	"着席位置の設定"
 "[english]SeatedSetupHeader"	"Seated Position Setup"
-"SeatedSetupButton"	"座位のリセット"
+"SeatedSetupButton"	"着席位置のリセット"
 "[english]SeatedSetupButton"	"Reset Seated Position"
-"SeatedSetupStatus"	"座位をリセットするには、リラックスした状態で前を向いて着席し、上のボタンを押してください。"
+"SeatedSetupStatus"	"着席位置をリセットするには、リラックスした状態で前を向いて着席し、上のボタンを押してください。"
 "[english]SeatedSetupStatus"	"To reset your seated position, face forward in a relaxed sitting position and press the button above."
 "PromptCancelQuestion"	"{s:current_app_name} を終了しますか？"
 "[english]PromptCancelQuestion"	"Are you sure you want to exit {s:current_app_name}?"
@@ -438,7 +438,7 @@
 "[english]PromptQuitAnyway"	"Exit Anyway"
 "PowerMenuViewRoom"	"ルームビューに切り替え"
 "[english]PowerMenuViewRoom"	"Toggle Room View"
-"PowerMenuResetSeatedPosition"	"座位のリセット"
+"PowerMenuResetSeatedPosition"	"着席位置のリセット"
 "[english]PowerMenuResetSeatedPosition"	"Reset Seated Position"
 "PowerMenuTurnOffController"	"コントローラの電源を切る"
 "[english]PowerMenuTurnOffController"	"Turn Off Controller"
@@ -632,4 +632,16 @@
 "[english]QuitApp"	"QUIT APP"
 "Customization_Disclaimer"	"拡張版 SteamVR 環境を有効済みの場合は、ホームスペースのカスタマイズにはアプリ内のメニューを使ってください。"
 "[english]Customization_Disclaimer"	"If Enhanced SteamVR Environments is enabled, use the in-app menu to customize your home space."
+"VRSettingsKnucklesTitle"	"Knuckles"
+"[english]VRSettingsKnucklesTitle"	"Knuckles"
+"VRSettingsKnuckles_CapsenseMode"	"CapSense モード"
+"[english]VRSettingsKnuckles_CapsenseMode"	"Cap Sense Mode"
+"KnucklesCapsenseMode_0"	"フィンガートラッキング (デフォルト)"
+"[english]KnucklesCapsenseMode_0"	"Finger Tracking (Default)"
+"KnucklesCapsenseMode_1"	"フィンガートラッキング無効"
+"[english]KnucklesCapsenseMode_1"	"Finger Tracking Disabled"
+"KnucklesCapsenseMode_2"	"CapSense でトリガーをコントロール"
+"[english]KnucklesCapsenseMode_2"	"Cap Sense controls Trigger"
+"KnucklesCapsenseMode_3"	"CapSense でグリップをコントロール"
+"[english]KnucklesCapsenseMode_3"	"Cap Sense controls Grip"
 }
