--- a/content/panorama/localization/tenfoot_romanian.txt
+++ b/content/panorama/localization/tenfoot_romanian.txt
@@ -627,6 +627,10 @@ Găsește mai multe înfățișări"
 "[english]MutedLabel"	"Muted"
 "BackToApp"	"ÎNAPOI LA APLICAȚIE"
 "[english]BackToApp"	"BACK TO APP"
+"GoHome"	"MERGI ACASĂ"
+"[english]GoHome"	"GO HOME"
+"QuitApp"	"PĂRĂSEȘTE APLICAȚIA"
+"[english]QuitApp"	"QUIT APP"
 "Customization_Disclaimer"	"Dacă mediile SteamVR îmbunătățite sunt activate, folosește meniul din aplicație pentru a-ți personaliza spațiul de acasă."
 "[english]Customization_Disclaimer"	"If Enhanced SteamVR Environments is enabled, use the in-app menu to customize your home space."
 "VRSettingsKnucklesTitle"	"Knuckles"
