--- a/content/vrmonitor/translations/vrmonitor_errors_swedish.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_swedish.txt
@@ -854,11 +854,13 @@ Du behöver kontakta HTC."
 "[english]Lighthouse_BasestationInternalFault_07_Action"	"Visit htcvive.com/support"
 "Warning_DismissableWarning_NeedKnucklesDriver_Action"	"Installera drivrutin"
 "[english]Warning_DismissableWarning_NeedKnucklesDriver_Action"	"Install Driver"
+"Warning_DismissableWarning_NewDriverInstalled_Header"	"Ny drivrutin installerad"
+"[english]Warning_DismissableWarning_NewDriverInstalled_Header"	"New Driver Installed"
 "Warning_DismissableWarning_NewDriverInstalled_Action"	"Starta om"
 "[english]Warning_DismissableWarning_NewDriverInstalled_Action"	"Restart"
 "VRInitError_VendorSpecific_WindowsNotInDevMode_Header"	"Windows-utvecklarläge krävs"
-"[english]VRInitError_VendorSpecific_WindowsNotInDevMode_Header"	"Windows Developer Mode Required"
+"[english]VRInitError_VendorSpecific_WindowsNotInDevMode_Header"	"Up to date Windows 10 install required"
 "VRInitError_VendorSpecific_WindowsNotInDevMode_Action"	"Aktivera utvecklarläget i Windows"
-"[english]VRInitError_VendorSpecific_WindowsNotInDevMode_Action"	"Set Windows to Developer Mode"
+"[english]VRInitError_VendorSpecific_WindowsNotInDevMode_Action"	"Click here for more information"
 }
 }
