--- a/content/vrmonitor/translations/vrmonitor_errors_tchinese.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_tchinese.txt
@@ -603,25 +603,25 @@
 "[english]Warning_DismissableWarning_OpticalBasestationSyncWarning_Action"	"More info"
 "Warning_DismissableWarning_MissedFrames_Description"	"目前執行的 VR 應用程式執行過於緩慢，體驗非常糟糕。這可能是由於該程式的資源要求過高，或者您的電腦配備過低。"
 "[english]Warning_DismissableWarning_MissedFrames_Description"	"The current VR application runs too slowly, which can give you a bad experience. This may be because the application is too demanding, or your computer is too slow."
-"Warning_DismissableWarning_BluetoothDriverNeedsInstallation_Header"	"藍牙驅動程式"
+"Warning_DismissableWarning_BluetoothDriverNeedsInstallation_Header"	"藍芽驅動程式"
 "[english]Warning_DismissableWarning_BluetoothDriverNeedsInstallation_Header"	"Bluetooth Driver"
 "Warning_DismissableWarning_BluetoothDriverNeedsInstallation_Description"	"還需要安裝一個驅動程式才能完成連結盒的安裝。SteamVR 在成功安裝後需要重新啟動。"
 "[english]Warning_DismissableWarning_BluetoothDriverNeedsInstallation_Description"	"A driver needs to be installed to complete Link Box installation. SteamVR needs to be restarted after successful installation."
 "Warning_DismissableWarning_BluetoothDriverNeedsInstallation_Action"	"安裝"
 "[english]Warning_DismissableWarning_BluetoothDriverNeedsInstallation_Action"	"Install"
-"Warning_DismissableWarning_BluetoothDriverFailedInstallation_Header"	"藍牙驅動程式安裝失敗"
+"Warning_DismissableWarning_BluetoothDriverFailedInstallation_Header"	"藍芽驅動程式安裝失敗"
 "[english]Warning_DismissableWarning_BluetoothDriverFailedInstallation_Header"	"Bluetooth Driver installation failed"
 "Warning_DismissableWarning_BluetoothDriverFailedInstallation_Description"	"還需要安裝一個驅動程式才能完成連結盒的安裝。重新啟動 SteamVR 後再嘗試。"
 "[english]Warning_DismissableWarning_BluetoothDriverFailedInstallation_Description"	"A driver needs to be installed to complete Link Box installation. Restart SteamVR and try again."
 "Warning_DismissableWarning_BluetoothDriverFailedInstallation_Action"	"重試"
 "[english]Warning_DismissableWarning_BluetoothDriverFailedInstallation_Action"	"Retry"
-"Warning_DismissableWarning_BluetoothLinkNeedsInstallation_Header"	"藍牙連接"
+"Warning_DismissableWarning_BluetoothLinkNeedsInstallation_Header"	"藍芽連接"
 "[english]Warning_DismissableWarning_BluetoothLinkNeedsInstallation_Header"	"Bluetooth Link"
 "Warning_DismissableWarning_BluetoothLinkNeedsInstallation_Description"	"需要安裝藍芽連結才能啟用連結盒的通訊。"
 "[english]Warning_DismissableWarning_BluetoothLinkNeedsInstallation_Description"	"Bluetooth Link needs to be installed to enable Link Box communication."
 "Warning_DismissableWarning_BluetoothLinkNeedsInstallation_Action"	"安裝"
 "[english]Warning_DismissableWarning_BluetoothLinkNeedsInstallation_Action"	"Install"
-"Warning_DismissableWarning_BluetoothLinkFailedInstallation_Header"	"藍牙連結安裝失敗"
+"Warning_DismissableWarning_BluetoothLinkFailedInstallation_Header"	"藍芽連結安裝失敗"
 "[english]Warning_DismissableWarning_BluetoothLinkFailedInstallation_Header"	"Bluetooth Link installation failed"
 "Warning_DismissableWarning_BluetoothLinkFailedInstallation_Description"	"必須安裝藍芽連結才能啟用連結盒的通訊。重新啟動 SteamVR 後再嘗試。"
 "[english]Warning_DismissableWarning_BluetoothLinkFailedInstallation_Description"	"Bluetooth Link needs to be installed to enable Link Box communication. Restart SteamVR and try again."
@@ -639,7 +639,7 @@
 "[english]Popover_LowBattery_Controller_Description"	"This controller is connected and tracking but the battery is low."
 "Popover_LowBattery_Controller_Action"	"識別控制器"
 "[english]Popover_LowBattery_Controller_Action"	"Identify controller"
-"Warning_DismissableWarning_BluetoothLinkCommunicationFailed_Header"	"藍牙連結通訊失敗"
+"Warning_DismissableWarning_BluetoothLinkCommunicationFailed_Header"	"藍芽連結通訊失敗"
 "[english]Warning_DismissableWarning_BluetoothLinkCommunicationFailed_Header"	"Bluetooth Link communication failed"
 "Warning_DismissableWarning_BluetoothLinkCommunicationFailed_Description"	"藍芽連結可能需要重新啟動才能開啟連結盒的通訊。若失敗，請重新啟動 SteamVR 。"
 "[english]Warning_DismissableWarning_BluetoothLinkCommunicationFailed_Description"	"Bluetooth Link might need to restart to enable Link Box communication. Restart SteamVR if this fails."
@@ -843,6 +843,8 @@
 "[english]VRInitError_Compositor_UnableToCreateDevice_Action"	"Troubleshooting"
 "Lighthouse_BasestationInternalFault_06_Header"	"定位器無法使用"
 "[english]Lighthouse_BasestationInternalFault_06_Header"	"Base station unusable"
+"Lighthouse_BasestationInternalFault_06_Description"	"定位器產生內部問題（錯誤 06）。請找出指示燈閃紅光的定位器，關閉其電源，再重新啟動。如果問題持續發生，請聯繫製造商尋求協助。"
+"[english]Lighthouse_BasestationInternalFault_06_Description"	"A base station has developed an internal problem (fault 06). Please power cycle the base station with the red blinking indicator light. If the condition persists, please contact the manufacturer for assistance."
 "Lighthouse_BasestationInternalFault_06_Action"	"造訪 htcvive.com/support"
 "[english]Lighthouse_BasestationInternalFault_06_Action"	"Visit htcvive.com/support"
 "Lighthouse_BasestationInternalFault_07_Header"	"定位器無法使用"
