--- a/content/vrmonitor/translations/vrmonitor_french.txt
+++ b/content/vrmonitor/translations/vrmonitor_french.txt
@@ -621,7 +621,7 @@
 "[english]PairingWizard_PairAnotherController"	"Pair Another Controller"
 "PairingWizard_LookingForControllers_Header"	"Recherche du contrôleur Vive..."
 "[english]PairingWizard_LookingForControllers_Header"	"Looking for Vive Controller..."
-"PairingWizard_LookingForControllers_Content"	"Maintenez les boutons « App » et « System » appuyés jusqu'à entendre un son.\n\nLe voyant du contrôleur devrait commencer à clignoter en bleu, indiquant que le contrôleur est en mode Association."
+"PairingWizard_LookingForControllers_Content"	"Maintenez les boutons App et System appuyés jusqu'à entendre un son.\n\nLe voyant du contrôleur devrait clignoter en bleu, indiquant que le contrôleur est en mode Association."
 "[english]PairingWizard_LookingForControllers_Content"	"Press and hold the App and System buttons until it chimes.\n\nThe controller LED should start blinking blue to indicate that it is in pairing mode."
 "PairingWizard_TimeoutHappened_Header"	"Aucun contrôleur détecté"
 "[english]PairingWizard_TimeoutHappened_Header"	"No Controller Detected"
@@ -1397,7 +1397,7 @@
 "[english]Settings_Audio_AudioMirrorUnsupported"	"Audio mirroring is not supported on this platform"
 "Settings_AllowReprojection"	"Autoriser la reprojection entrelacée"
 "[english]Settings_AllowReprojection"	"Allow interleaved reprojection"
-"DismissableWarning_Detected"	"Détecté"
+"DismissableWarning_Detected"	"Détecté à "
 "[english]DismissableWarning_Detected"	"Detected"
 "DismissableWarning_TimeFormat"	"hh:mm:ss"
 "[english]DismissableWarning_TimeFormat"	"h:mm:ss AP"
@@ -1957,5 +1957,11 @@
 "[english]Settings_NightModeDesc"	"Night Mode dims the headset until 5:00 AM (or until SteamVR is restarted)."
 "Settings_PauseOnStandby"	"Mettre en pause le rendu lorsque le casque est inactif"
 "[english]Settings_PauseOnStandby"	"Pause rendering when headset is idle"
+"MenuAction_RunMediaPlayer"	"Lecteur multimédia"
+"[english]MenuAction_RunMediaPlayer"	"Run Media Player"
+"Settings_LockedModeCheck"	"Mode verrouillé"
+"[english]Settings_LockedModeCheck"	"Locked Mode"
+"Settings_LockedModeDesc"	"Autoriser l’affichage dans le casque lorsque l’ordinateur est verrouillé."
+"[english]Settings_LockedModeDesc"	"Allow rendering to headset while workstation is locked."
 }
 }
