--- a/content/vrmonitor/translations/vrmonitor_german.txt
+++ b/content/vrmonitor/translations/vrmonitor_german.txt
@@ -1970,5 +1970,9 @@
 "[english]Settings_NightModeDesc"	"Night Mode dims the headset until 5:00 AM (or until SteamVR is restarted)."
 "Settings_PauseOnStandby"	"Rendering pausieren, während das VR-Headset inaktiv ist"
 "[english]Settings_PauseOnStandby"	"Pause rendering when headset is idle"
+"MenuAction_RunMediaPlayer"	"Media Player ausführen"
+"[english]MenuAction_RunMediaPlayer"	"Run Media Player"
+"Advanced_Bluetooth"	"Bluetooth"
+"[english]Advanced_Bluetooth"	"Bluetooth"
 }
 }
