--- a/content/vrmonitor/translations/vrmonitor_russian.txt
+++ b/content/vrmonitor/translations/vrmonitor_russian.txt
@@ -501,7 +501,7 @@
 "[english]Advanced_Compositor_CameraPaused"	"Camera Paused"
 "MessageBox_OK"	"OK"
 "[english]MessageBox_OK"	"OK"
-"MessageBox_Cancel"	"Отменить"
+"MessageBox_Cancel"	"Отмена"
 "[english]MessageBox_Cancel"	"Cancel"
 "MessageBox_Exit"	"Выход"
 "[english]MessageBox_Exit"	"Exit"
@@ -1838,9 +1838,21 @@
 "[english]Settings_Advanced_AllowSupersampleFiltering"	"Enable Advanced Supersample Filtering"
 "Explanation_SupersamplingFiltering"	"Параметры фильтрации полноэкранного сглаживания:"
 "[english]Explanation_SupersamplingFiltering"	"Supersampling Filtering Options:"
+"MenuAction_ReportABug"	"Сообщить об ошибке"
+"[english]MenuAction_ReportABug"	"Report A Bug"
+"BugReporter_SubmissionFailure"	"Ошибка отправления.\n\nСборщик отчётов об ошибках загружен. Пожалуйста, попробуйте снова.\n\nОшибка: %1\n"
+"[english]BugReporter_SubmissionFailure"	"Submission Failure.\n\nThe Bug Collector may be busy. Please try submitting again.\n\nError: %1\n"
 "BugReporter_ProgressSubmittingPercent"	"Идет отправка...%1%"
 "[english]BugReporter_ProgressSubmittingPercent"	"Submitting...%1%"
 "Settings_PauseOnStandby"	"Останавливать отображение, когда гарнитура бездействует"
 "[english]Settings_PauseOnStandby"	"Pause rendering when headset is idle"
+"MenuAction_RunMediaPlayer"	"Запустить проигрыватель"
+"[english]MenuAction_RunMediaPlayer"	"Run Media Player"
+"Settings_LockedModeCheck"	"Режим блокировки"
+"[english]Settings_LockedModeCheck"	"Locked Mode"
+"Settings_LockedModeDesc"	"Разрешить рендеринг в шлеме, когда рабочая станция заблокирована."
+"[english]Settings_LockedModeDesc"	"Allow rendering to headset while workstation is locked."
+"Advanced_Bluetooth"	"Bluetooth"
+"[english]Advanced_Bluetooth"	"Bluetooth"
 }
 }
