--- a/content/vrmonitor/translations/vrmonitor_spanish.txt
+++ b/content/vrmonitor/translations/vrmonitor_spanish.txt
@@ -1549,6 +1549,8 @@
 "[english]Settings_Advanced_DirectMode_Header"	"Direct Mode"
 "Settings_ForceReprojection"	"Activar reproyección permanente"
 "[english]Settings_ForceReprojection"	"Enable Always-on Reprojection."
+"Settings_CheckForMissedFramesWarning"	"Mostrar advertencia de fotograma perdido"
+"[english]Settings_CheckForMissedFramesWarning"	"Show missed frame warning"
 "Settings_ShowPlaylistMenu"	"Mostrar menú de la lista de reproducción"
 "[english]Settings_ShowPlaylistMenu"	"Show Playlist Menu"
 "Settings_StartSteamVROnAppLaunch"	"Iniciar SteamVR cuando se inicie una aplicación"
@@ -1809,6 +1811,8 @@
 "[english]Lighthouse_BasestationInternalFault_05_Description"	"A base station has developed an internal problem (fault 05). Please power cycle the base station with the red blinking indicator light. If the condition persists, please contact the manufacturer for assistance."
 "Lighthouse_BasestationInternalFault_05_Action"	"Visitar htcvive.com/support"
 "[english]Lighthouse_BasestationInternalFault_05_Action"	"Visit htcvive.com/support"
+"Settings_StatusWindowMinimizeToTray_Text"	"Cuando se minimiza, el estado de SteamVR se minimiza a la bandeja de sistema"
+"[english]Settings_StatusWindowMinimizeToTray_Text"	"When minimized, SteamVR Status minimizes to the system tray"
 "ShutdownWhileAppRunning_Title"	"Apagado de SteamVR"
 "[english]ShutdownWhileAppRunning_Title"	"SteamVR Shutdown"
 "ShutdownWhileAppRunning_Format"	"Apagar SteamVR también cerrará %1. ¿Deseas continuar?"
