--- a/content/vrmonitor/translations/vrmonitor_swedish.txt
+++ b/content/vrmonitor/translations/vrmonitor_swedish.txt
@@ -1965,11 +1965,19 @@
 "[english]BugReporter_ProgressSubmittingPercent"	"Submitting...%1%"
 "Settings_HomeAppCheck"	"SteamVR Home-beta"
 "[english]Settings_HomeAppCheck"	"SteamVR Home Beta"
+"Settings_HomeAppDesc"	"Den nya SteamVR Home-upplevelsen har stöd för detaljrikare hemutrymmen, sociala funktioner med mera. Denna funktion är i beta för tillfället, ge oss gärna feedback på forumen."
+"[english]Settings_HomeAppDesc"	"The new SteamVR Home experience supports richer home spaces, social features, and more. This feature is currently in Beta, please provide feedback on the forums."
 "Settings_NightModeCheck"	"Nattläge"
 "[english]Settings_NightModeCheck"	"Night Mode"
 "Settings_NightModeDesc"	"Nattläget stänger av lyset i headsetet tills kl 05:00 (eller tills SteamVR startas om)."
 "[english]Settings_NightModeDesc"	"Night Mode dims the headset until 5:00 AM (or until SteamVR is restarted)."
 "Settings_PauseOnStandby"	"Pausa rendering när headsetet inte används"
 "[english]Settings_PauseOnStandby"	"Pause rendering when headset is idle"
+"MenuAction_RunMediaPlayer"	"Kör mediaspelaren"
+"[english]MenuAction_RunMediaPlayer"	"Run Media Player"
+"Settings_LockedModeCheck"	"Låst läge"
+"[english]Settings_LockedModeCheck"	"Locked Mode"
+"Settings_LockedModeDesc"	"Tillåt rendering till headset medan arbetsstationen är låst."
+"[english]Settings_LockedModeDesc"	"Allow rendering to headset while workstation is locked."
 }
 }
