--- a/content/vrmonitor/translations/vrmonitor_tchinese.txt
+++ b/content/vrmonitor/translations/vrmonitor_tchinese.txt
@@ -619,7 +619,7 @@
 "[english]PairingWizard_PairController_Success_Title"	"Success!"
 "PairingWizard_PairAnotherController"	"配對另一個控制器"
 "[english]PairingWizard_PairAnotherController"	"Pair Another Controller"
-"PairingWizard_LookingForControllers_Header"	"正再搜尋 Vive 控制器…"
+"PairingWizard_LookingForControllers_Header"	"正在搜尋 Vive 控制器…"
 "[english]PairingWizard_LookingForControllers_Header"	"Looking for Vive Controller..."
 "PairingWizard_LookingForControllers_Content"	"按住「程式」與「系統」鍵不放直到其發出聲響。\n\n控制器 LED 燈應開始閃爍藍色，代表控制器已進入配對模式。"
 "[english]PairingWizard_LookingForControllers_Content"	"Press and hold the App and System buttons until it chimes.\n\nThe controller LED should start blinking blue to indicate that it is in pairing mode."
@@ -939,7 +939,7 @@
 "[english]Settings_USB_Component_Hub"	"Hub"
 "Settings_USB_Component_HubController"	"中心控制台"
 "[english]Settings_USB_Component_HubController"	"Hub Controller"
-"Settings_USB_Component_HubBluetooth"	"藍牙"
+"Settings_USB_Component_HubBluetooth"	"藍芽"
 "[english]Settings_USB_Component_HubBluetooth"	"Bluetooth"
 "Settings_USB_Component_WatchmanBoard"	"Watchman 觀測員電板"
 "[english]Settings_USB_Component_WatchmanBoard"	"Watchman Board"
@@ -1135,15 +1135,15 @@
 "[english]FrameTiming_PostSubmit"	"Application (other)"
 "MenuAction_Devices"	"裝置"
 "[english]MenuAction_Devices"	"Devices"
-"Settings_Bluetooth_Header"	"藍牙"
+"Settings_Bluetooth_Header"	"藍芽"
 "[english]Settings_Bluetooth_Header"	"Bluetooth"
 "Settings_Bluetooth_Expalanation"	"藍芽連結會定位器通訊以在需要喚醒與使其睡眠。此服務同時也會在您處於 VR 內與手機保持通訊。"
 "[english]Settings_Bluetooth_Expalanation"	"Bluetooth Link communicates with Base Stations to wake and sleep them when needed. This service also enables communication with your mobile phone while in VR."
-"Settings_Bluetooth_Link_Install"	"安裝藍牙連結"
+"Settings_Bluetooth_Link_Install"	"安裝藍芽連結"
 "[english]Settings_Bluetooth_Link_Install"	"Install Bluetooth Link"
-"Settings_Bluetooth_Link_Uninstall"	"解除安裝藍牙連結"
+"Settings_Bluetooth_Link_Uninstall"	"解除安裝藍芽連結"
 "[english]Settings_Bluetooth_Link_Uninstall"	"Uninstall Bluetooth Link"
-"Settings_Bluetooth_Driver_Install"	"安裝藍牙驅動程式"
+"Settings_Bluetooth_Driver_Install"	"安裝藍芽驅動程式"
 "[english]Settings_Bluetooth_Driver_Install"	"Install Bluetooth Driver"
 "Settings_PowerOffControllers_Info"	" 　"
 "[english]Settings_PowerOffControllers_Info"	" "
@@ -1385,7 +1385,7 @@
 "[english]DismissableWarning_UnknownHardwareDetected"	"Unknown Hardware Detected (0x2000)"
 "DismissableWarning_WindowsAeroDisabled"	"Windows Aero 已停用（0x4000）"
 "[english]DismissableWarning_WindowsAeroDisabled"	"Windows Aero disabled (0x4000)"
-"Settings_UseBluetoothLink_Text"	"開啟藍牙通訊"
+"Settings_UseBluetoothLink_Text"	"開啟藍芽通訊"
 "[english]Settings_UseBluetoothLink_Text"	"Enable Bluetooth communication"
 "Settings_UseBluetoothLink_Info"	"該選項啟用時，您可以無線更新和管理定位器的電源，並可收到手機上的訊息。"
 "[english]Settings_UseBluetoothLink_Info"	"When this is enabled, base stations can be wirelessly power managed and updated, and you can get alerts from your phone."
@@ -1953,9 +1953,13 @@
 "[english]Settings_HomeAppDesc"	"The new SteamVR Home experience supports richer home spaces, social features, and more. This feature is currently in Beta, please provide feedback on the forums."
 "Settings_NightModeCheck"	"夜間模式"
 "[english]Settings_NightModeCheck"	"Night Mode"
-"Settings_NightModeDesc"	"夜間模式會讓頭戴顯示器的光線變暗至 5:00 AM（或直到重啟 SteamVR）。"
+"Settings_NightModeDesc"	"夜間模式會調低螢幕亮度到凌晨5:00止（或重啟 SteamVR）。"
 "[english]Settings_NightModeDesc"	"Night Mode dims the headset until 5:00 AM (or until SteamVR is restarted)."
 "Settings_PauseOnStandby"	"當頭戴顯示器閒置時會暫停渲染"
 "[english]Settings_PauseOnStandby"	"Pause rendering when headset is idle"
+"MenuAction_RunMediaPlayer"	"執行媒體播放器"
+"[english]MenuAction_RunMediaPlayer"	"Run Media Player"
+"Settings_LockedModeCheck"	"鎖定模式"
+"[english]Settings_LockedModeCheck"	"Locked Mode"
 }
 }
