--- a/content/vrmonitor/translations/vrmonitor_turkish.txt
+++ b/content/vrmonitor/translations/vrmonitor_turkish.txt
@@ -1962,5 +1962,13 @@
 "[english]Settings_NightModeDesc"	"Night Mode dims the headset until 5:00 AM (or until SteamVR is restarted)."
 "Settings_PauseOnStandby"	"Başlık boştayken işlemeyi duraklat"
 "[english]Settings_PauseOnStandby"	"Pause rendering when headset is idle"
+"MenuAction_RunMediaPlayer"	"Medya Oynatıcısını Çalıştır"
+"[english]MenuAction_RunMediaPlayer"	"Run Media Player"
+"Settings_LockedModeCheck"	"Kilitli Mod"
+"[english]Settings_LockedModeCheck"	"Locked Mode"
+"Settings_LockedModeDesc"	"İş istasyonu kilitliyken başlığın görüntü işlemesine izin ver."
+"[english]Settings_LockedModeDesc"	"Allow rendering to headset while workstation is locked."
+"Advanced_Bluetooth"	"Bluetooth"
+"[english]Advanced_Bluetooth"	"Bluetooth"
 }
 }
