--- a/content/vrmonitor/translations/vrmonitor_ukrainian.txt
+++ b/content/vrmonitor/translations/vrmonitor_ukrainian.txt
@@ -1969,5 +1969,9 @@
 "[english]Settings_NightModeDesc"	"Night Mode dims the headset until 5:00 AM (or until SteamVR is restarted)."
 "Settings_PauseOnStandby"	"Призупиняти візуалізацію, коли шолом бездіяльний"
 "[english]Settings_PauseOnStandby"	"Pause rendering when headset is idle"
+"MenuAction_RunMediaPlayer"	"Запустити медіапрогравач"
+"[english]MenuAction_RunMediaPlayer"	"Run Media Player"
+"Settings_LockedModeDesc"	"Дозволити відтворення на шолом, поки робоча станція заблокована."
+"[english]Settings_LockedModeDesc"	"Allow rendering to headset while workstation is locked."
 }
 }
